--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@angular/router": "6.0.0",
     "@ng-bootstrap/ng-bootstrap": "2.2.1",
     "@swimlane/ngx-datatable": "13.0.1",
-    "bootstrap": "4.1.2",
+    "bootstrap": ">=4.3.1",
     "core-js": "2.5.5",
     "debounce": "^1.2.0",
     "jquery": "3.3.1",
